--- a/Design/index.html
+++ b/Design/index.html
@@ -32,7 +32,7 @@
 						<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Experience</a>
+						<a class="nav-link" href="experience.html">Experience</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Education</a>
@@ -54,7 +54,8 @@
 				<div class="carousel slide text-nowrap w-75 overflow-hidden" data-ride="carousel">
 					<div class="carousel-inner">
 						<span class="carousel-item brand-gray active">matt5671110</span>
-						<span class="carousel-item brand-gray">That guy that is unreasonably good at Orion: Prelude</span>
+						<!-- <span class="carousel-item brand-gray">That guy that is unreasonably good at Orion:
+							Prelude</span> -->
 						<span class="carousel-item brand-gray">The person who made this website</span>
 					</div>
 				</div>
@@ -63,25 +64,32 @@
 
 		<!-- Body Content -->
 		<div class="row">
-				<div class="col-md">
-					<h2>About Me</h2>
-					<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-						condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-						Donec sed odio dui. </p>
-				</div>
+			<div class="col-md">
+				<h2>About Me</h2>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+					mauris
+					condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+					euismod.
+					Donec sed odio dui. </p>
 			</div>
+		</div>
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Experience</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-					condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+					mauris
+					condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+					euismod.
 					Donec sed odio dui. </p>
-				<p><a class="btn btn-secondary rounded-0" href="#" role="button">View details &raquo;</a></p>
+				<p><a class="btn btn-secondary rounded-0" href="experience.html" role="button">View details &raquo;</a>
+				</p>
 			</div>
 			<div class="col-md-6">
 				<h2>Education</h2>
-				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-					felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
+					porta
+					felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+					fermentum
 					massa justo sit amet risus.</p>
 				<p><a class="btn btn-secondary rounded-0" href="#" role="button">View details &raquo;</a></p>
 			</div>
