Modify layout of experience page and fix issue with collapsed navbar in both pages.

--- a/Design/experience.html
+++ b/Design/experience.html
@@ -22,11 +22,11 @@
 
         <!-- navbar -->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
-                aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+                aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-md-center">
+            <div class="collapse navbar-collapse justify-content-md-center" id="navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
@@ -62,58 +62,212 @@
 
         <!-- Body Content -->
         <div class="row">
-            <div class="col-md">
-                <h2>Programming</h2>
-            </div>
-        </div>
-        <div class="row ml-5">
-            <div class="col-md">
-                <div class="card rounded-0">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-3 my-auto">
-                                <img src="MATT.png" class="img-thumbnail w-100 rounded-0 float-left">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-md">
+                        <h2>Job Experience</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg">
+                        <div class="card rounded-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 my-auto">
+                                        <img src="MATT.png" class="img-thumbnail w-100 rounded-0 float-left">
+                                    </div>
+                                    <div class="col-9">
+                                        <div class="row">
+                                            <h2 class="col">Walmart</h2>
+                                            <span class="col brand-gray text-right float-right">Jan. 2000 - Mar.
+                                                2001</span>
+                                        </div>
+                                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
+                                            cursus
+                                            commodo,
+                                            tortor
+                                            mauris
+                                            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                                            malesuada
+                                            magna
+                                            mollis
+                                            euismod.
+                                            Donec sed odio dui.</p>
+                                        <p><span>Source Code: <a href="#">Github</a></span></p>
+                                        <a href="#" class="btn btn-secondary rounded-0" role="button">View details
+                                            &raquo;</a>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-9">
-                                <h2>Project 1</h2>
-                                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-                                    commodo,
-                                    tortor
-                                    mauris
-                                    condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                                    magna
-                                    mollis
-                                    euismod.
-                                    Donec sed odio dui.</p>
-                                <p><span>Source Code: <a href="#">Github</a></span></p>
-                                <a href="#" class="btn btn-secondary rounded-0" role="button">View details &raquo;</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg">
+                        <div class="card rounded-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 my-auto">
+                                        <img src="Test.jpg" class="img-thumbnail w-100 rounded-0 float-left">
+                                    </div>
+                                    <div class="col-9">
+                                        <div class="row">
+                                            <h2 class="col">CSEC IT Intern</h2>
+                                            <span class="col brand-gray text-right float-right">Jan. 2000 - Mar.
+                                                2001</span>
+                                        </div>
+                                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
+                                            cursus
+                                            commodo,
+                                            tortor
+                                            mauris
+                                            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                                            malesuada
+                                            magna
+                                            mollis
+                                            euismod.
+                                            Donec sed odio dui.</p>
+                                        <p><span class="text-muted">Source Code: private</span></p>
+                                        <a href="#" class="btn btn-secondary rounded-0" role="button">View details
+                                            &raquo;</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row ml-5">
-            <div class="col-md">
-                <div class="card rounded-0">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-3 my-auto">
-                                <img src="Test.jpg" class="img-thumbnail w-100 rounded-0 float-left">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-md">
+                        <h2>Programming</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md">
+                        <div class="card rounded-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 my-auto">
+                                        <img src="MATT.png" class="img-thumbnail w-100 rounded-0 float-left">
+                                    </div>
+                                    <div class="col-9">
+                                        <h2>Project 1</h2>
+                                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
+                                            cursus
+                                            commodo,
+                                            tortor
+                                            mauris
+                                            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                                            malesuada
+                                            magna
+                                            mollis
+                                            euismod.
+                                            Donec sed odio dui.</p>
+                                        <p><span>Source Code: <a href="#">Github</a></span></p>
+                                        <a href="#" class="btn btn-secondary rounded-0" role="button">View details
+                                            &raquo;</a>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-9">
-                                <h2>Project 2</h2>
-                                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-                                    commodo,
-                                    tortor
-                                    mauris
-                                    condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                                    magna
-                                    mollis
-                                    euismod.
-                                    Donec sed odio dui.</p>
-                                <p><span class="text-muted">Source Code: private</span></p>
-                                <a href="#" class="btn btn-secondary rounded-0" role="button">View details &raquo;</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md">
+                        <div class="card rounded-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 my-auto">
+                                        <img src="Test.jpg" class="img-thumbnail w-100 rounded-0 float-left">
+                                    </div>
+                                    <div class="col-9">
+                                        <h2>Project 2</h2>
+                                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
+                                            cursus
+                                            commodo,
+                                            tortor
+                                            mauris
+                                            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                                            malesuada
+                                            magna
+                                            mollis
+                                            euismod.
+                                            Donec sed odio dui.</p>
+                                        <p><span class="text-muted">Source Code: private</span></p>
+                                        <a href="#" class="btn btn-secondary rounded-0" role="button">View details
+                                            &raquo;</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-md">
+                        <h2>Misc.</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md">
+                        <div class="card rounded-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 my-auto">
+                                        <img src="MATT.png" class="img-thumbnail w-100 rounded-0 float-left">
+                                    </div>
+                                    <div class="col-9">
+                                        <h2>Project 1</h2>
+                                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
+                                            cursus
+                                            commodo,
+                                            tortor
+                                            mauris
+                                            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                                            malesuada
+                                            magna
+                                            mollis
+                                            euismod.
+                                            Donec sed odio dui.</p>
+                                        <p><span>Source Code: <a href="#">Github</a></span></p>
+                                        <a href="#" class="btn btn-secondary rounded-0" role="button">View details
+                                            &raquo;</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md">
+                        <div class="card rounded-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 my-auto">
+                                        <img src="Test.jpg" class="img-thumbnail w-100 rounded-0 float-left">
+                                    </div>
+                                    <div class="col-9">
+                                        <h2>Project 2</h2>
+                                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
+                                            cursus
+                                            commodo,
+                                            tortor
+                                            mauris
+                                            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                                            malesuada
+                                            magna
+                                            mollis
+                                            euismod.
+                                            Donec sed odio dui.</p>
+                                        <p><span class="text-muted">Source Code: private</span></p>
+                                        <a href="#" class="btn btn-secondary rounded-0" role="button">View details
+                                            &raquo;</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
