--- a/Design/index.html
+++ b/Design/index.html
@@ -22,11 +22,11 @@
 
 		<!-- navbar -->
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
-				aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+				aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse justify-content-md-center">
+			<div class="collapse navbar-collapse justify-content-md-center" id="navbar">
 				<ul class="navbar-nav">
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
