Add link to source code in design of experience detail page

--- a/Design/experience_detail.html
+++ b/Design/experience_detail.html
@@ -98,10 +98,15 @@
 				</div>
 
 				<!-- Skills list -->
-				<ul class="skills-list pl-4">
+				<div class="row">
+				<ul class="col-6 skills-list pl-4">
 					<li>Test 1</li>
 					<li>Test 2</li>
 				</ul>
+				<div class="col-6">
+					<p><span>Source Code: <a href="#">Github</a></span></p>
+				</div>
+				</div>
 				<!-- Description -->
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed arcu sem. Vestibulum elementum lacus ut
