Change Job Experience card layout on experience page

--- a/Design/experience.html
+++ b/Design/experience.html
@@ -79,9 +79,12 @@
 									</div>
 									<div class="col-9">
 										<div class="row">
-											<h2 class="col">Walmart Assembler</h2>
-											<span class="col brand-gray text-right float-right">Jan. 2000 - Mar.
+											<h2 class="col">Walmart</h2>
+											<span class="col brand-gray text-right float-right">January 2000 - March
 												2001</span>
+										</div>
+										<div class="row">
+											<i class="col brand-gray">Assembler</i>
 										</div>
 										<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
 											cursus
@@ -112,9 +115,12 @@
 									</div>
 									<div class="col-9">
 										<div class="row">
-											<h2 class="col">CSEC IT Intern</h2>
-											<span class="col brand-gray text-right float-right">Jan. 2000 - Mar.
+											<h2 class="col">Colorado Springs Early Colleges (CSEC)</h2>
+											<span class="col brand-gray text-right float-right">January 2000 - March
 												2001</span>
+										</div>
+										<div class="row">
+											<i class="col brand-gray">IT Intern</i>
 										</div>
 										<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac
 											cursus
