Create education page design

--- a/Design/experience.html
+++ b/Design/experience.html
@@ -29,13 +29,13 @@
 			<div class="collapse navbar-collapse justify-content-md-center" id="navbar">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="experience.html">Experience</a>
+						<a class="nav-link" href="experience.html">Experience<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Education</a>
+						<a class="nav-link" href="education.html">Education</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contact</a>
@@ -80,7 +80,7 @@
 									<div class="col-9">
 										<div class="row">
 											<h2 class="col">Walmart</h2>
-											<span class="col brand-gray text-right float-right">January 2000 - March
+											<span class="col-auto brand-gray text-right float-right">January 2000 - March
 												2001</span>
 										</div>
 										<div class="row">
@@ -116,7 +116,7 @@
 									<div class="col-9">
 										<div class="row">
 											<h2 class="col">Colorado Springs Early Colleges (CSEC)</h2>
-											<span class="col brand-gray text-right float-right">January 2000 - March
+											<span class="col-auto brand-gray text-right float-right">January 2000 - March
 												2001</span>
 										</div>
 										<div class="row">
