--- a/Design/experience_detail.html
+++ b/Design/experience_detail.html
@@ -29,13 +29,13 @@
 			<div class="collapse navbar-collapse justify-content-md-center" id="navbar">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="experience.html">Experience</a>
+						<a class="nav-link" href="experience.html">Experience<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Education</a>
+						<a class="nav-link" href="education.html">Education</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contact</a>
