Add school logos to education page to see final look

--- a/Design/education.html
+++ b/Design/education.html
@@ -76,7 +76,7 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-3 col-md-2 my-auto">
-								<img src="MATT.png" class="img-thumbnail w-100 rounded-0 float-left">
+								<img src="ppcc logo.png" class="img-thumbnail w-100 rounded-0 float-left">
 							</div>
 							<div class="col-9 col-md-10">
 								<div class="row">
@@ -99,7 +99,7 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-3 col-md-2 my-auto">
-								<img src="Test.jpg" class="img-thumbnail w-100 rounded-0 float-left">
+								<img src="csec logo.jpg" class="img-thumbnail w-100 rounded-0 float-left">
 							</div>
 							<div class="col-9 col-md-10">
 								<div class="row">
