Remove cover photo from job detail design.

--- a/Design/job_detail.html
+++ b/Design/job_detail.html
@@ -46,16 +46,11 @@
 
 		<!-- page header -->
 		<div class="jumbotron rounded-0" id="page-header">
-			<div class="row">
-				<div class="col-auto my-auto">
-					<div class="row mb-0 pb-0">
-						<h1 class="brand-color mb-0 pb-0" id="name">Matthew Turner</h1>
-					</div>
-					<span class="brand-gray active">Walmart</span>
-				</div>
-				<div class="col">
-						<img src="walmart.jpg" alt="Walmart" class="img-fluid">
-				</div>
+			<div class="row mb-0 pb-0">
+				<h1 class="brand-color mb-0 pb-0" id="name">Matthew Turner</h1>
+			</div>
+			<div class="row ml-2">
+				<span class="text-nowrap w-75 overflow-hidden brand-gray active">Walmart</span>
 			</div>
 		</div>
 
